--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo no test script available",
-    "start": "nodemon server/server.js",
+    "start": "nodemon server.js",
     "dev": "webpack -d --watch"
   },
   "repository": {
@@ -22,23 +22,11 @@
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.0",
-    "faker": "^4.1.0",
-    "mongoose": "^5.5.14",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "mongoose": "^5.5.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
     "live-server": "^1.2.1",
-    "mysql": "^2.17.1",
     "nodemon": "^1.19.0",
-    "path": "^0.12.7",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "path": "^0.12.7"
   }
 }
