--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reacting-to-tasks",
+  "name": "ForgEtsy_Image_Carousel_Service",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -22,6 +22,7 @@
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.0",
+    "faker": "^4.1.0",
     "image-webpack-loader": "^6.0.0",
     "mongoose": "^5.5.14",
     "path": "^0.12.7",
