--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo no test script available",
-    "start": "node server/server.js",
+    "start": "nodemon server/server.js",
     "dev": "webpack -d --watch"
   },
   "repository": {
