--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^5.5.14",
     "path": "^0.12.7",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
