--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 services:
   app:
     container_name: docker-server-mongo
@@ -10,6 +10,6 @@ services:
       - mongo
   mongo:
     container_name: mongo
-    image: mongo
+    image: mongo:latest
     ports:
      - '27017:27017'
