zoomed image size off, but otherwise gold

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.10.1",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
