--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo no test script available",
     "start": "node server/server.js",
     "dev": "webpack -d --watch",
-    "server:dev": "nodemon server/server.js"
+    "server:dev": "nodemon server/server.js",
+    "prod": "webpack"
   },
   "repository": {
     "type": "git",
