--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.10.1",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
