--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.0",
     "faker": "^4.1.0",
-    "image-webpack-loader": "^6.0.0",
     "mongoose": "^5.5.14",
     "path": "^0.12.7",
     "react": "^16.8.6",
@@ -39,6 +38,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "debug": "^4.1.1",
     "live-server": "^1.2.1",
     "nodemon": "^1.19.0",
     "style-loader": "^1.0.0",
