Add load testing

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.17.0",
     "faker": "^4.1.0",
     "mongoose": "^5.5.14",
+    "newrelic": "^6.1.0",
     "path": "^0.12.7",
+    "pg": "^7.12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.10.1",
